--- a/www/css/style.css
+++ b/www/css/style.css
@@ -277,7 +277,7 @@
 **********/
 
 .list .item.item-wallet .badge{
-  top: 28px;
+  top: 29px;
 }
 .list .item.item-wallet {
   height: 38px;
